# video-gen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
examples/: sample_plan.json
scripts/: _models.py  health.py  render_video.py  smoke_test.py  title_card.py
tests/: test_wrap.py
